gap fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -188,7 +188,6 @@ p {
     display: flex;
     flex-direction: column;
     margin: auto;
-    gap: 1.5em;
 }
 
 .block {
